<resources>
    <string name="app_name">Megastar11</string>
     <string name="facebook_app_id">424242424ad</string>
    <string name="fb_login_protocol_scheme">sfsffssf</string>
    <string name="razor_pay">jllljlfljflljlllkklj</string>
    <string name="EXCEPTION_MESSAGE">Something went wrong, please try again later.</string>
    <string name="info">INFO</string>
    <string name="player">PLAYER</string>
    <string name="bold">bold</string>
    <string name="semiBold">semibold</string>
    <string name="light">light</string>
    <string name="ASAP">ASAP</string>
    <string name="REGULAR">regular</string>
    <string name="MONTSERRAT_REGULAR">MONTSERRAT_REGULAR</string>
    <string name="MONTSERRAT_BOLD">MONTSERRAT_BOLD</string>
    <string name="emailAddress">Email Address</string>
    <string name="emailAddressormobile">Email / Mobile No.</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot password?\n<b><font color='#e82b2b'>Reset</font></b></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_not_valid">Email address is not valid</string>
    <string name="or">or</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="dontHaveAccount">Don\'t have an account ? <b>Register</b></string>
    <string name="network_error">There\'s no network connection right now. Please check your wifi connection or mobile data.</string>
    <string name="GOOGLE">Google</string>
    <string name="FACEBOOK">Facebook</string>
    <string name="empty_email">Please enter email address.</string>
    <string name="empty_inviteCode">Please enter Invite code.</string>
    <string name="empty_emailMobile">Please enter mobile or email.</string>
    <string name="invalid_emailMobile">Please enter valid mobile or email.</string>
    <string name="empty_code">Please enter code.</string>
    <string name="invalid_email">Please enter valid email address.</string>
    <string name="empty_device_token">Device token is empty.</string>
    <string name="empty_device_id">Device id is empty.</string>
    <string name="empty_password">Please enter password.</string>
    <string name="password_notMatch">Password not match.</string>
    <string name="short_password">Password minimum length should be 6 characters.</string>
    <string name="please_select_date">Please select date.</string>
    <string name="select_date">Select date</string>
    <string name="empty_session">Your session is empty.</string>
    <string name="empty_file">Empty File.</string>
    <string name="invalid_file">Invalid File, Select other one.</string>
    <string name="action_canceled">Sorry, you have cancelled action. Please try again.</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="mobileNoInfo">You will receive an OTP for verification</string>
    <string name="emailInfo">No spam. We promise! </string>
    <string name="passwordInfo">Password must contain Minimum 6 character</string>
    <string name="pageNotFound">Data Not Available</string>
    <string name="OAuthException">OAuthException</string>
    <string name="tryAgain">Problem while fetching data from server. Please try again later.</string>
    <string name="invalidSession">Invalid user login session key.</string>
    <string name="internalErrorTryAgain">Internal server error. Please try again later.</string>
    <string name="poorConnection">Network Error!\nPoor connection or connection lost.</string>
    <string name="noConnection">No internet connection.</string>
    <string name="exception">Exception:</string>
    <string name="try_again">Try Again</string>
    <string name="loading">loading&#8230;</string>
    <string name="mobile">Mobile</string>
    <string name="alreadyUser">Already a user ? Log In</string>
    <string name="alreadyaUser">Already a user ?\n <font color='#e82b2b'>Log In</font></string>
    <string name="notAMember">Not a member ? <b><u><font color='#FBC349'>Register</font></u></b></string>
    <string name="beingAuser">Not an user?\nSign up</string>
    <string name="empty_name">Please enter name.</string>
    <string name="empty_aadhar">Please enter Aadhaar number.</string>
    <string name="empty_account">Please enter account number.</string>
    <string name="empty_ifsc">Please enter IFSC code.</string>
    <string name="empty_bank">Please enter bank name.</string>
    <string name="empty_branch">Please enter branch name.</string>
    <string name="empty_phone_number">Please enter mobile number.</string>
    <string name="empty_otp">Please enter mobile OTP.</string>
    <string name="invalid_phone_number">Please enter valid mobile number.</string>
    <string name="invalid_aadhar">Please enter valid Aadhaar number.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="empty_confirm_password">Please enter confirm password.</string>
    <string name="pleaseCheckYourMail">Please check your mail or phone for verification code.</string>
    <string name="forgotYourPassword">Forgot Your Password</string>
    <string name="forgotPasswordText">Don\'t worry just fill in your email address or mobile no. and we\'ll help you reset your password</string>
    <string name="resetpassword">Reset Password</string>
    <string name="resetCode">Resend Code</string>
    <string name="empty_new_password">Please enter new password.</string>
    <string name="empty_old_password">Please enter old password.</string>
    <string name="password_does_not_match">Password doesn\'t match.</string>
    <string name="title_notifications">Notifications</string>
    <string name="delete_notifications">Are you sure to delete all notifcations?</string>
    <string name="home">HOME</string>
    <string name="myContest">MY CONTESTS</string>
    <string name="me">My ACCOUNT</string>
    <string name="more">MORE</string>
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="kabaddi">Kabaddi</string>
    <string name="fixtures">Upcoming</string>
    <string name="live">Live</string>
    <string name="results">Results</string>
    <string name="selectSport">Select your sports</string>
    <string name="VS">VS</string>
    <string name="vs">vs</string>
    <string name="in_progress">In Progress</string>
    <string name="Zero_s">0s left</string>
    <string name="completed">Completed</string>
    <string name="empty_page">Page empty.</string>
    <string name="empty_match_id">Page match id.</string>
    <string name="empty_user_id">Page user id.</string>
    <string name="toProgressText">To progress to a Level 4 Champion</string>
    <string name="playFor">Play for</string>
    <string name="join">Join</string>
    <string name="cashContain">More cash contain</string>
    <string name="unlockReward">Unlock these reward at level 10</string>
    <string name="reward">Reward</string>
    <string name="noRewardEarnd">No reward earned yet.</string>
    <string name="noRewardEarndtext">More you play,the more you get. Join contest to be champion.</string>
    <string name="yourAccount">Your Account</string>
    <string name="deposited">Deposited</string>
    <string name="winnings">Winnings</string>
    <string name="addcash">Add Cash</string>
    <string name="withdraw">Withdraw</string>
    <string name="playingHistory">Playing History</string>
    <string name="contest">Contest</string>
    <string name="contests">Contests</string>
    <string name="matches">Matches</string>
    <string name="series">Series</string>
    <string name="wines">Wins</string>
    <string name="ranking">Ranking</string>
    <string name="noRanking">No global ranking to show.</string>
    <string name="friend">Friends</string>
    <string name="nofriend">No Friends invite yet.</string>
    <string name="inviteFriends">Invite friends &amp; get Rs.100</string>
    <string name="inviteFriendsText">The more friends you invited,the more you both earn.</string>
    <string name="personalDetail">Personal Detail</string>
    <string name="fullProfile"><u>Full Profile</u></string>
    <string name="underline_changePassword"><u>Change Password</u></string>
    <string name="logout">Logout</string>
    <string name="rs">Rs. </string>
    <string name="myAccount">My Account</string>
    <string name="totalBalance">TOTAL BALANCE</string>
    <string name="amountToExpire">AMOUNT TO EXPIRE</string>
    <string name="expireInfo">Money deposited by you that you can use to join any contests but can\'t withdraw.</string>
    <string name="bonusToExpire">BONUS TO EXPIRE</string>
    <string name="bonusInfo">Money that you can use to join any public contests</string>
    <string name="bonusInfo_new">Cash Bonus can be used in selective contests. All cash bonus have a validity of  %1$s days from date of credit.</string>
    <string name="winningInfo">Money that you can withdraw or re-use to join any contests.</string>
    <string name="recentTrasactions">My Recent transactions</string>
    <string name="withDrawalInProgress">Withdrawal in progress </string>
    <string name="managePayment">Manage Payments</string>
    <string name="addRemoveCard">Add/remove card,wallets etc.</string>
    <string name="entryFeeInfo">Maximum usable cash bonus per match = 10% of entry fees.<font color='#335B94'><b><u>Know more</u></b></font></string>
    <string name="addcashCaps">ADD CASH</string>
    <string name="logout_app">Are you sure, you want to logout?</string>
    <string name="pleaceVerifyEmail">Please verify your email.</string>
    <string name="pleaceVerifyMobile">Please verify your mobile number.</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="transaction_id_">Transaction ID:</string>
    <string name="transaction_date">Transaction Date:</string>
    <string name="team_name">Team Name:</string>
    <string name="file_provider_authority" translatable="false">com.mw.fantasy.fileprovider</string>
    <string name="exception_message">Something went wrong, please try again later.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="storage">Storage</string>
    <string name="grant_access_message">You need to grant access to</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="camera_not_avail">Sorry, It seems your device don\'t have camera.</string>
    <string name="bf_Share_this_contest_with_your_friends">Share this contest with your friends!</string>
    <string name="verify_your_account">Verify Your Account</string>
    <string name="mobile_and_email_step1">Mobile &amp; Email\n Step 1</string>
    <string name="you_will_receive_otp_on_this_mobile_number">You will receive an OTP on this mobile number.</string>
    <string name="you_will_receive_code_on_this_email_address">You will receive a code on this email address.</string>
    <string name="send_otp">Send OTP</string>
    <string name="send_code">Send Code</string>
    <string name="verify_your_mobile">Verify Your Mobile</string>
    <string name="enter_mobile_OTP">Enter Mobile OTP</string>
    <string name="check_inbox">Please check your mobile inbox for OTP.</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="points">Points</string>
    <string name="team_1">Team %1$s</string>
    <string name="defenders">Defenders</string>
    <string name="goal_keeper">Goal-Keeper</string>
    <string name="midfielders">Midfielders</string>
    <string name="forwards">Forwards</string>
    <string name="total_points">Total Points</string>
    <string name="actual">Actual</string>
    <string name="starting11">Starting11</string>
    <string name="auc_btn_font">Lato-Black.ttf</string>
</resources>