<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_item_mobile_not_verified"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/white"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.mw.fantasy.customView.CustomTextView
                style="@style/rippleStyleTransparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/verify_your_mobile"
                android:textColor="@color/textColor"
                android:drawableTint="@color/colorPrimary"
                android:textSize="@dimen/text_extra_large"
                app:drawableLeftCompat="@drawable/ic_mobile"
                app:rd_enable="false"

                app:textfont="light" />

            <com.mw.fantasy.customView.CustomEditText
                android:id="@+id/edt_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_txt_form_bg_inner"
                android:hint="@string/mobile"
                android:imeActionLabel="Next"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="40"
                android:padding="@dimen/dimen_10dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/secondary"
                android:textSize="@dimen/edt_txt_size_normal"
                app:hintfont="light"
                app:textfont="light" />

            <com.mw.fantasy.customView.CustomTextView
                style="@style/rippleStyleTransparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/you_will_receive_otp_on_this_mobile_number"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_small"
                app:rd_enable="false"
                app:textfont="@string/light" />


            <com.mw.fantasy.customView.CustomTextView
                android:id="@+id/ctv_send_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/send_otp"
                android:textColor="@color/white"
                android:textSize="@dimen/primary_txt_size"
                app:rd_enable="true"
                app:textAllCaps="true"
                app:textfont="light" />

        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>