<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:cardCornerRadius="0dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.mw.fantasy.customView.CustomTextView
                android:id="@+id/event_value"
                style="@style/SignUPCustomEditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/starting11"
                android:textColor="@color/textColor"
                app:textfont="light" />

            <com.mw.fantasy.customView.CustomTextView
                android:id="@+id/points_value"
                style="@style/SignUPCustomEditTextStyle"
                android:layout_width="@dimen/dimen_60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/points"
                android:textColor="@color/textColor"
                app:textfont="light" />

            <com.mw.fantasy.customView.CustomTextView
                android:id="@+id/actual_value"
                style="@style/SignUPCustomEditTextStyle"
                android:layout_width="@dimen/dimen_60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_toLeftOf="@+id/points_value"
                android:gravity="center"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/actual"
                android:textColor="@color/textColor"
                app:textfont="light" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/greyDarkBg"/>

    </LinearLayout>


</android.support.v7.widget.CardView>
