<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_back"

    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.mw.fantasy.customView.CustomTextView
            android:id="@+id/ctv_team"
            style="@style/rippleStyleTransparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/team_1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            app:rd_enable="true"
            app:textfont="bold" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:padding="3dp"
            android:src="@drawable/fantasy_logo_text"
            android:textSize="@dimen/text_medium" />

        <ImageView
            android:id="@+id/ctv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/ctv_cross"
            android:layout_toLeftOf="@+id/ctv_cross"
            android:padding="5dp"
            android:visibility="gone"
            android:textSize="@dimen/text_medium"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_edit" />


        <ImageView
            android:id="@+id/ctv_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/ctv_cross"
            android:layout_toLeftOf="@+id/ctv_cross"
            android:padding="5dp"
            android:textSize="@dimen/text_medium"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_refresh_button" />

        <ImageView
            android:id="@+id/ctv_cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:textSize="@dimen/text_medium"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_cross" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

      >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_above="@+id/bottamRel"
            android:background="@drawable/preview_football"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <com.mw.fantasy.customView.CustomTextView
                style="@style/rippleStyleTransparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/goal_keeper"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_very_small"
                android:visibility="visible"
                app:rd_enable="false"
                app:textfont="light" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_goal_keeper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"

                android:layout_marginRight="2dp"
                android:minHeight="70dp"
                tools:listitem="@layout/list_item_players_preview" />


            <com.mw.fantasy.customView.CustomTextView
                style="@style/rippleStyleTransparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/defenders"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_very_small"
                android:visibility="visible"
                app:rd_enable="false"
                app:textfont="light" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_defenders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:minHeight="70dp"
                tools:listitem="@layout/list_item_players_preview" />

            <com.mw.fantasy.customView.CustomTextView
                style="@style/rippleStyleTransparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/midfielders"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_very_small"
                android:visibility="visible"
                app:rd_enable="false"
                app:textfont="light" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_bowlers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:minHeight="70dp"
                tools:listitem="@layout/list_item_players_preview" />


            <com.mw.fantasy.customView.CustomTextView
                style="@style/rippleStyleTransparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/forwards"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_very_small"
                android:visibility="visible"
                app:rd_enable="false"
                app:textfont="light" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_all_rounders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:minHeight="70dp"
                tools:listitem="@layout/list_item_players_preview" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/bottamRel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">


                <com.mw.fantasy.customView.CustomTextView
                    android:id="@+id/totalPoints"
                    style="@style/rippleStyleTransparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_5"

                    android:text="477"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_large"
                    app:rd_enable="false"
                    android:textColor="#FFFFFF"
                    app:textfont="@string/MONTSERRAT_BOLD" />

                <com.mw.fantasy.customView.CustomTextView

                    style="@style/rippleStyleTransparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/total_points"
                    android:textAllCaps="true"
                    android:textSize="@dimen/textsize_too_small"
                    app:rd_enable="false"
                    android:textColor="#FFFFFF"
                    android:layout_margin="@dimen/margin_5"
                    app:textfont="@string/MONTSERRAT_REGULAR" />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>