<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/include"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include"
        android:layout_marginStart="@dimen/element_margin_top"
        android:layout_marginLeft="@dimen/element_margin_top"
        android:layout_marginEnd="@dimen/element_margin_top"
        android:layout_marginRight="@dimen/element_margin_top"
        android:orientation="vertical">

        <com.mw.fantasy.customView.CustomTextView
            android:id="@+id/ctv_enterOTP"
            style="@style/rippleStyleTransparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/login_form_edt_padding"
            android:paddingBottom="@dimen/login_form_edt_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/primary_txt_size"
            app:rd_enable="true"
            app:textfont="bold"
            tools:text="@string/enter_mobile_OTP" />

        <com.mw.fantasy.customView.CustomTextView
            android:id="@+id/ctv_checkForOTP"
            style="@style/rippleStyleTransparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/secondary_txt_size"
            app:rd_enable="true"
            app:textfont="light"
            tools:text="@string/check_inbox" />

        <com.mw.fantasy.customView.CustomPinView
            android:id="@+id/pinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:cursorVisible="true"
            android:hint=""
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:borderColor="@color/black"
            app:borderWidth="1dp"
            app:itemCount="6"
            app:itemRadius="4dp"
            app:itemSize="48dp"
            app:itemSpacing="5dp" />


        <com.mw.fantasy.customView.CustomTextView
            android:id="@+id/ctv_confirm_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/shedow_yellow_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/verify_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_txt_size"
            app:rd_enable="true"
            app:textfont="light" />

        <com.mw.fantasy.customView.CustomTextView
            android:id="@+id/ctv_resend_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shedow_yellow_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/resend_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_txt_size"
            app:rd_enable="true"
            app:textfont="light" />
    </LinearLayout>
</RelativeLayout>